<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_1"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/item_1"/>
        <item
            android:id="@+id/drawer_item_2"
            android:icon="@drawable/summer_icon"
            android:title="@string/item_2"/>
        <item
            android:id="@+id/drawer_item_3"
            android:icon="@drawable/fall_icon"
            android:title="@string/item_3"/>
        <item
            android:id="@+id/drawer_item_4"
            android:icon="@drawable/winter_icon"
            android:title="@string/item_4"/>
        <item
            android:id="@+id/drawer_item_5"
            android:icon="@drawable/winter_icon"
            android:title="@string/item_5"/>
        <item
            android:id="@+id/section"
            android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/drawer_favourite"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/early"/>

                <item
                    android:id="@+id/drawer_downloaded"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/later"/>
            </menu>
        </item>
    </group>
</menu>
